--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Install Ansible
         run: pip3 install ansible-core
       - name: Trigger a new import on Galaxy
-        run: >
+        run: >-
           ansible-galaxy role import
-            --api-key "${{ secrets.GALAXY_API_KEY }}"
-            "$(echo $GITHUB_REPOSITORY | cut -d/ -f1)"
-            "$(echo $GITHUB_REPOSITORY | cut -d/ -f2)"
+          --api-key "${{ secrets.GALAXY_API_KEY }}"
+          "$(echo $GITHUB_REPOSITORY | cut -d/ -f1)"
+          "$(echo $GITHUB_REPOSITORY | cut -d/ -f2)"
