--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,9 @@ jobs:
         distro:
           - ubuntu:20.04
           - ubuntu:18.04
+        ansible:
+          - ansible
+          - ansible==2.9.*
     steps:
       - name: Check out
         uses: actions/checkout@v2
@@ -25,8 +28,8 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install test dependencies
-        run: pip3 install ansible molecule molecule-docker
+        run: pip3 install "${{ matrix.ansible }}" molecule molecule-docker
       - name: Run Molecule tests
-        run: molecule test
+        run: molecule test --all
         env:
           MOLECULE_DISTRO: ${{ matrix.distro }}
