--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,10 @@ on:
   schedule:
     - cron: "26 5 * * 2"
 
+defaults:                             # TODO: Remove after the fix is released, see
+  run:                                #       https://github.com/ansible-community/molecule/pull/3409
+    working-directory: 'giner.tfenv'  #
+
 jobs:
   molecule:
     name: Molecule test
@@ -23,6 +27,8 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@v2
+        with:                   # TODO: Remove after the fix is released, see
+          path: 'giner.tfenv'   #       https://github.com/ansible-community/molecule/pull/3409
       - name: Set up Python 3
         uses: actions/setup-python@v2
         with:
