--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -4,9 +4,9 @@
   gather_facts: false
   tasks:
   - name: Check terraform version
-    command: ~/bin/terraform version
+    ansible.builtin.command: ~/bin/terraform version
     register: terraform_version_result
     changed_when: false
   - name: Terraform is installed
-    assert:
+    ansible.builtin.assert:
       that: terraform_version_result.stdout_lines[0] is match("Terraform")
