molecule: Create user 'ansible' in 'prepare'
- Move creation of user 'ansible' and configuring sudo to the step 'prepare'
- There is no need in customizing Dockerfile anymore, so removing it

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,5 +12,9 @@ lint: |
   ansible-lint
 provisioner:
   name: ansible
+  inventory:
+    group_vars:
+      all:
+        ansible_user: ansible
 verifier:
   name: ansible
