--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Install test dependencies
         run: python3 -m pip install "${{ matrix.ansible }}" -Ur requirements-molecule.txt
       - name: Install ansible collections required for Ansible 2.9
+        if: matrix.ansible == 'ansible==2.9.*'
         run: ansible-galaxy collection install community.docker
       - name: Run Molecule tests
         run: molecule test --all
